--- a/ProjetoFinal.csproj
+++ b/ProjetoFinal.csproj
@@ -67,18 +67,22 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="About.aspx" />
     <Content Include="App_Data\ProjetoFinalDB.mdf" />
     <Content Include="App_Data\ProjetoFinalDB_log.ldf">
       <DependentUpon>ProjetoFinalDB.mdf</DependentUpon>
     </Content>
     <Content Include="assets\img\background_01.jpg" />
     <Content Include="assets\img\logo02.png" />
+    <Content Include="assets\img\logo1.png" />
     <Content Include="assets\img\logo_128.png" />
     <Content Include="assets\img\logo_256.png" />
     <Content Include="assets\img\logo_512.png" />
     <Content Include="assets\img\logo_64.png" />
     <Content Include="assets\img\24789.jpg" />
+    <Content Include="assets\img\fundo.jpeg" />
     <Content Include="cadastro.aspx" />
+    <Content Include="Contacts.aspx" />
     <Content Include="css\global.css" />
     <Content Include="css\logincad.css" />
     <Content Include="index.aspx" />
@@ -94,12 +98,26 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="About.aspx.cs">
+      <DependentUpon>About.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="About.aspx.designer.cs">
+      <DependentUpon>About.aspx</DependentUpon>
+    </Compile>
     <Compile Include="cadastro.aspx.cs">
       <DependentUpon>cadastro.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="cadastro.aspx.designer.cs">
       <DependentUpon>cadastro.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Contacts.aspx.cs">
+      <DependentUpon>Contacts.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Contacts.aspx.designer.cs">
+      <DependentUpon>Contacts.aspx</DependentUpon>
     </Compile>
     <Compile Include="index.aspx.cs">
       <DependentUpon>index.aspx</DependentUpon>
