--- a/ProjetoFinal.csproj
+++ b/ProjetoFinal.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="css\about.css" />
     <Content Include="App_Data\ProjetoFinalDB.mdf" />
     <Content Include="App_Data\ProjetoFinalDB_log.ldf">
       <DependentUpon>ProjetoFinalDB.mdf</DependentUpon>
