--- a/ProjetoFinal.csproj
+++ b/ProjetoFinal.csproj
@@ -93,6 +93,8 @@
     <Content Include="login.aspx" />
     <Content Include="logout.aspx" />
     <Content Include="perfil.aspx" />
+    <Content Include="privacidade.aspx" />
+    <Content Include="css\privacidade.css" />
     <Content Include="SQLDataSources.aspx" />
     <Content Include="teste.aspx" />
     <Content Include="upload.aspx" />
@@ -155,6 +157,13 @@
     </Compile>
     <Compile Include="perfil.aspx.designer.cs">
       <DependentUpon>perfil.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="privacidade.aspx.cs">
+      <DependentUpon>privacidade.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="privacidade.aspx.designer.cs">
+      <DependentUpon>privacidade.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SitePage.Master.cs">
